BST revision (visitation bug fix)